[package]
name = "v3x-property-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
bigdecimal = { version = "0.4.5", features = ["serde"] }
chrono = "0.4.38"
color-eyre = "0.6.3"
dotenv = "0.15.0"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
meilisearch-sdk = "0.27.1"
minio = "0.1.0"
ollama-rs = "0.2.1"
openid = "0.14.0"
poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master" }
poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch = "master", features = [
    "chrono",
    "uuid",
    "sqlx",
    "url",
    "email",
    "email_address",
    "redoc",
    "static-files",
] }
regex = "1.11.1"
reqwest = "0.12.5"
scraper = "0.21.0"
serde = "1.0.204"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1.19"
serde_with = { version = "3.9.0", features = ["json", "chrono"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = [
    "runtime-async-std",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }
terminal-banner = "0.4.1"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "serde",             # Lets you serialize UUIDs
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = ["oauth2"]
oauth2 = []
