[package]
name = "v3x-property-engine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
aws-config = "1.5.10"
aws-sdk-s3 = "1.64.0"
bigdecimal = { version = "0.4.5", features = ["serde"] }
chrono = "0.4.38"
color-eyre = "0.6.3"
dotenv = "0.15.0"
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
meilisearch-sdk = { version = "0.26.1" } 
# TODO: Re-enable when more stable
# meilisearch-sdk = { git="https://github.com/CommanderStorm/meilisearch-rust", branch = "vector-search-embedder"} 
ollama-rs = { version = "0.2.1", features = [
    "rustls",
], default-features = false }
openid = { version = "0.14.0", default-features = false, features = ["rustls"] }
poem = { version = "3.0.4", git = "https://github.com/poem-web/poem", branch = "master", features = [
    "rustls",
] }
poem-openapi = { version = "5", git = "https://github.com/poem-web/poem", branch = "master", features = [
    "chrono",
    "uuid",
    "sqlx",
    "url",
    "email",
    "email_address",
    "redoc",
    "static-files",
] }
regex = "1.11.1"
reqwest = { version = "0.12.5", features = [
    "rustls-tls",
    # Add back the default features excluding native-tls
    "charset",
    "http2",
    "macos-system-configuration",
], default-features = false }
rustls = "0.23.19"
scraper = "0.21.0"
serde = "1.0.204"
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1.19"
serde_with = { version = "3.9.0", features = ["json", "chrono"] }
sha2 = "0.10.8"
sqlx = { version = "0.7.4", features = [
    "runtime-async-std",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "ipnetwork",
] }
terminal-banner = "0.4.1"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }

async-h1 = "2.3"
async-tls = "0.11"
rust-s3 = { version = "0.36.0-beta.2", default-features = false, features = [
    "async-std-rustls-tls",
] }
build-info = "0.0.39"
futures = "0.3.31"

[dependencies.uuid]
version = "1.10.0"
features = [
    "serde",             # Lets you serialize UUIDs
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = ["oauth2"]
oauth2 = []

[build-dependencies]
build-info-build = "0.0.39"
